# PokerVector

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IDEAS.md  LICENSE-APACHE  LICENSE-MIT  MVP.md  README.md  ROADMAP.md  SETUP.md
benches/: hotpath.rs
docs/: perf-audit.md
docs/build-plans/: action-sequence-embeddings.md  desktop-app.md  lancedb-migration.md
docs/plans/: action-sequence-embeddings.md  bankroll-tracking.md  cluster-analysis.md  compare-players.md  find-leaks.md  get-session-summary.md  hand-range-analysis.md  hands-like-this.md  mcp-refactor.md  positional-stats.md  session-tracking.md  showdown-analysis.md  stats-expansion.md  villain-profiling.md
src/: action_encoder.rs  config.rs  embedder.rs  importer.rs  lib.rs  main.rs  mcp.rs  scanner.rs  search.rs  sessions.rs  storage.rs  summarizer.rs  types.rs
src/action_encoder/: classify.rs  mod.rs  pot_tracker.rs  tests.rs
src/mcp/: analysis.rs  helpers.rs  mod.rs  params.rs  prompts.rs  resources.rs  tools_advanced.rs  tools_export.rs  tools_hands.rs  tools_meta.rs  tools_search.rs  tools_sessions.rs  tools_spots.rs  tools_stats.rs  tools_tournament.rs  tools_villains.rs
src/parsers/: acr.rs  mod.rs
src/stats/: calculate.rs  cbet.rs  helpers.rs  limp.rs  mod.rs  pool.rs  postflop.rs  preflop.rs  steal.rs  test_helpers.rs  villains.rs
src/storage/: mod.rs  tests.rs
tests/: action_encoder_tests.rs  parser_tests.rs
tests/fixtures/: bomb_pot.txt  cash_ante.txt  cash_showdown.txt  cash_simple.txt  five_card_omaha.txt  hero_allin.txt  multiword_name.txt  omaha_hl.txt  omaha_plo.txt  (+5 more)
(+20 files in other folders)
